--- a/noteapp/index.html
+++ b/noteapp/index.html
@@ -2,7 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link href="/style/bootstrap.min.css" rel="stylesheet" />
+    <link href="/style/fontawesome/css/all.css" rel="stylesheet" />
+    <link href="/style/style.css" rel="stylesheet" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
   </head>
