--- a/noteapp/index.html
+++ b/noteapp/index.html
@@ -2,11 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link href="/style/bootstrap.min.css" rel="stylesheet" />
-    <link href="/style/fontawesome/css/all.css" rel="stylesheet" />
-    <link href="/style/style.css" rel="stylesheet" />
+    <link href="./src//styles/bootstrap.min.css" rel="stylesheet" />
+    <link href="./src/styles/fontawesome/css/all.css" rel="stylesheet" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>NoteApp</title>
   </head>
   <body>
     <div id="root"></div>
